# PhysAssistBench

./: .gitignore  LICENSE  README.md  pyproject.toml
physassistbench/: __init__.py  eval_runner.py  export_annotation.py  fill_main_table.py  generate_all.py  jsonl_to_excel.py  merge_eval_parts.py  model_configs.yaml  paths.py  prefilter_patients.py  qualified_patients.json  results_analyzer.py  results_to_excel.py  run_eval.py  run_explicit_vs_implicit.py
physassistbench/eval/: __init__.py  eval_discharge_planning.py  iirs.py  metrics.py  rubric_eval.py  rule_checker.py
physassistbench/examples/: med_safety_example.jsonl
physassistbench/phm/: __init__.py  builder.py  extractor.py  llm_generator.py  patient_agent_runtime.py  persona.py  schema.py  section_parser.py  verifier.py
physassistbench/pipeline/: __init__.py  context_builder.py  data_sampler.py  dep_graph.py  ehr_prefetch.py  encoder.py  generate_discharge_planning.py  generate_v2.py  patient_prefilter.py  patient_selector.py  rubric_generator.py  scenarios.py  sequences.py  session_planner.py  user_agent_v2.py
physassistbench/pipeline/agents/: __init__.py  answer_agent.py  checker_planner.py  checker_tool.py  clinical_checker.py  llm_client.py  planner_agent.py  tool_executor.py  translator.py  user_answer_agent.py
physassistbench/tests/: test_units.py
physassistbench/tools/: ehr_api_tools.py  patient_interview_tools.py  tool_registry.py  tool_schemas.py  write_tool_schemas.py
physassistbench/tools/fhir/: adapter.py  fhir_tools.py  schemas.py
scripts/: smoke_test.sh  split_mimic_by_subject.py
(+2 files in other folders)
